--- a/src/components/ConlluViewer/style.scss
+++ b/src/components/ConlluViewer/style.scss
@@ -1,10 +1,12 @@
 .conllu-viewer-container {
+  overflow-x: auto;
+  width: 100%;
+  text-align: center;
+
   #canvas {
-    width: 100%;
     height: 50vh;
-    padding: 16px;
+    padding: 16px 0px;
     background-color: white;
-    box-shadow: var(--shadow);
 
     .item-postag {
       fill: #000;
