another layout round

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,12 +1,13 @@
 .home-container {
-  padding: 16px;
-  margin-top: 28px;
+  padding: 0px 16px;
+  margin-top: 56px;
 
   .expression {
     font-family: 'Courier New', Courier, monospace;
     font-size: var(--font-size-body);
     white-space: nowrap;
     border: 0;
+    height: 48vh;
   }
 
   .sentence-container {
