--- a/src/components/UDSentenceTokens/style.scss
+++ b/src/components/UDSentenceTokens/style.scss
@@ -1,5 +1,5 @@
 .tokens-container {
-  height: 50vh;
+  height: 48vh;
   overflow-x: auto;
 
   .table-ud-tokens {
@@ -7,6 +7,12 @@
       width: 20px;
       height: 20px;
       margin-left: 8px;
+      cursor: pointer;
+    }
+
+    .edit-value {
+      border-bottom: dashed 1px var(--color-primary);
+      color: var(--color-primary);
       cursor: pointer;
     }
   }
