--- a/src/components/UDTreeView/style.scss
+++ b/src/components/UDTreeView/style.scss
@@ -1,7 +1,10 @@
 .ud-tree-container {
+  margin-top: 56px;
+  position: relative;
+
   #canvas-tree {
     width: 100%;
-    height: 80vh;
+    height: 92vh;
     padding: 16px;
     background-color: white;
     box-shadow: var(--shadow);
@@ -28,6 +31,52 @@
       &.pos {
         color: var(--color-primary);
       }
+    }
+  }
+}
+
+.popover-token {
+  min-width: 20vw;
+
+  .popover-body {
+    text-align: center;
+
+    .input-value {
+      line-height: 48px;
+      height: 64px;
+      margin-bottom: 16px;
+      padding: 4px 16px;
+      width: 100%;
+      font-size: var(--font-size-subtitle);
+      border-radius: var(--border-radius);
+      text-align: center;
+      border-width: 2px;
+      border-color: var(--color-dark);
+    }
+
+    .input-group {
+      height: 64px;
+      margin-bottom: 16px;
+      flex-wrap: nowrap;
+
+      .input-value {
+        border-right: none;
+      }
+
+      .input-group-text {
+        cursor: pointer;
+        background-color: var(--color-surface);
+        border-left: none;
+        border-width: 2px;
+        border-color: var(--color-dark);
+        border-top-right-radius: var(--border-radius);
+        border-bottom-right-radius: var(--border-radius);
+      }
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
