some layout fixes and improvements adds conversion back to conllu text

--- a/src/components/ConlluViewer/style.scss
+++ b/src/components/ConlluViewer/style.scss
@@ -2,9 +2,10 @@
   overflow-x: auto;
   width: 100%;
   text-align: center;
+  position: relative;
 
   #canvas {
-    height: 30vh;
+    height: 40vh;
     padding: 16px 0px;
     background-color: white;
 
