--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,6 +1,5 @@
 .home-container {
-  padding: 0px 16px;
-  margin-top: 56px;
+  margin-top: 48px;
 
   .expression {
     font-family: 'Courier New', Courier, monospace;
@@ -37,22 +36,20 @@
     }
   }
 
-  .ud-viewer-container {
+  .ud-sentence-container {
     margin-top: 16px;
 
     .card-body {
       padding: 0px;
     }
 
-    .card-header {
+    .nav {
       display: flex;
       align-items: center;
       font-weight: var(--font-weight-large);
-      padding: 0px;
+      padding-left: 8px;
 
       .nav-item {
-        padding: 8px;
-
         a {
           font-weight: var(--font-weight-large);
           color: var(--color-dark);
@@ -64,9 +61,12 @@
       }
 
       .buttons {
-        margin-left: auto;
-        padding: 8px;
+        margin: 0px 8px 0px auto;
       }
     }
+  }
+
+  .ud-viewer-container {
+    margin-top: 4px;
   }
 }
