--- a/src/components/ConlluViewer/style.scss
+++ b/src/components/ConlluViewer/style.scss
@@ -1,13 +1,22 @@
 .conllu-viewer-container {
-  overflow-x: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  height: 88vh;
   text-align: center;
   position: relative;
+  overflow: auto;
+  background-color: white;
 
   #canvas {
-    height: 40vh;
+    max-width: 100%;
+    max-height: calc(88vh - 32px);
     padding: 16px 0px;
     background-color: white;
+    margin: auto;
+    display: block;
 
     .item-postag {
       fill: #000;
@@ -35,6 +44,25 @@
     .active-item {
       stroke: var(--color-primary);
       stroke-width: 3px;
+    }
+
+    .drag-over {
+      stroke: var(--color-success, #28a745);
+      stroke-width: 3px;
+      fill: rgba(40, 167, 69, 0.1);
+    }
+
+    .dragging {
+      opacity: 0.5;
+      cursor: grabbing !important;
+    }
+
+    g[style*='cursor: grab'] {
+      cursor: grab !important;
+    }
+
+    g[style*='cursor: grab']:active {
+      cursor: grabbing !important;
     }
   }
 }
