--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,22 +9,10 @@
   --font-size-body: 16px;
   --font-size-medium: 18px;
   --font-size-regular: 20px;
-  --font-size-subtitle: 24px;
-  --font-size-large: 32px;
-  --font-size-xlarge: 40px;
-  --font-size-xxlarge: 48px;
-  --font-size-xxxlarge: 56px;
-  --font-size-jumbo: 96px;
 
-  --spacing-xxsmall: calc(var(--spacing-xsmall) / 2);
-  --spacing-xsmall: 8px;
-  --spacing-small: calc(var(--spacing-xsmall) * 2);
-  --spacing-medium: 24px;
-  --spacing-large: 32px;
-  --spacing-xlarge: 40px;
-  --spacing-xxlarge: 48px;
-  --spacing-xxxlarge: 64px;
-  --spacing-jumbo: 96px;
+  --spacing-base: 8px;
+  --spacing-small: calc(var(--spacing-base) + 2px);
+  --spacing-medium: calc(var(--spacing-base) * 2);
 
   --color-primary: #185abd;
   --color-primary-alternative: #7c7c80;
@@ -38,22 +26,6 @@
   --color-disabled: #c8c6c4;
   --color-button-hover: #e1e0de;
   --color-dark: #000000;
-
-  --color-warning-20: rgba(255, 180, 13, 0.2);
-  --color-confirmed-20: rgba(20, 204, 128, 0.2);
-  --color-error-20: rgba(239, 99, 97, 0.2);
-
-  --opacity-black-62: rgba(18, 18, 18, 0.62);
-  --opacity-black-53: rgba(18, 18, 18, 0.53);
-  --opacity-black-32: rgba(18, 18, 18, 0.32);
-  --opacity-black-15: rgba(18, 18, 18, 0.15);
-  --opacity-black-08: rgba(18, 18, 18, 0.08);
-
-  --opacity-white-62: rgba(255, 255, 255, 0.62);
-  --opacity-white-53: rgba(255, 255, 255, 0.53);
-  --opacity-white-32: rgba(255, 255, 255, 0.32);
-  --opacity-white-15: rgba(255, 255, 255, 0.15);
-  --opacity-white-08: rgba(255, 255, 255, 0.08);
 
   --shadow: 0 1px 12px rgba(0, 0, 0, 0.1);
 
