--- a/src/components/App/AppModal/style.scss
+++ b/src/components/App/AppModal/style.scss
@@ -1,90 +1,34 @@
-.modal-backdrop.show {
-  opacity: 0;
-}
+.modal-container {
+  display: flex;
+  flex-direction: column;
 
-.modal {
-  border: 1px solid;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 2000;
+  > .header {
+    display: flex;
+    align-items: center;
+    border-bottom: var(--border-default);
+    padding: 16px;
 
-  .modal-dialog {
-    min-width: 40vw;
-  }
-
-  .modal-header {
-    border-bottom: 1px solid var(--color-primary);
-    background-color: var(--color-primary);
-    padding: var(--spacing-xxsmall);
-
-    .modal-title {
-      margin: 0 auto;
-      color: var(--color-surface);
-      font-family: var(--font-family-regular);
+    .title {
       font-size: var(--font-size-regular);
+      font-weight: var(--font-weight-large);
     }
 
-    .btn-close {
-      color: var(--color-primary);
-      margin: 0px;
-      opacity: 1;
+    > .ds-icon {
+      margin-left: auto;
+      margin-bottom: auto;
     }
   }
 
-  .modal-content {
-    border-radius: 8px;
-    border: none;
-    font-size: var(--font-size-medium);
+  > .body {
+    padding: 16px;
   }
 
-  .modal-footer {
-    justify-content: center;
-
-    button {
-      font-family: var(--font-family-regular);
-      font-style: var(--font-weight-medium);
-      font-weight: var(--font-weight-medium);
-      font-size: var(--font-size-button);
-      color: var(--color-background);
-      width: 200px;
-      border-radius: 8px;
-      padding: 12px;
-      border: none;
-    }
-
-    button:disabled {
-      background-color: var(--color-disabled);
-      border: 2px solid var(--color-disabled);
-      color: var(--color-surface);
-      border: none;
-      font-family: var(--font-family-medium);
-    }
-
-    .btn-danger {
-      background-color: #e25c5a;
-      margin-right: 40px;
-    }
-
-    .btn-success {
-      background-color: var(--color-complementary);
-    }
-
-    .btn-confirm {
-      margin-left: auto;
-      margin-right: 20px;
-    }
-
-    .btn-finish {
-      background-color: var(--color-primary);
-      color: var(--color-surface);
-      font-size: var(--font-size-medium);
-      font-family: var(--font-family-medium);
-      padding: 8px 20px;
-      border: 2px solid var(--color-primary);
-      border-radius: 0.5rem;
-      width: -moz-fit-content;
-      width: fit-content;
-      margin-left: auto;
-      margin-right: 20px;
-    }
+  > .footer {
+    display: flex;
+    justify-content: end;
+    margin-top: auto;
+    gap: 10px;
+    padding: 16px 16px 12px;
+    border-top: var(--border-default);
   }
 }
