--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,97 +3,25 @@
 html,
 body,
 #root {
-  min-height: 100%;
+  height: 100%;
+  margin: 0;
   background-color: var(--color-background);
   font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
 .pointer {
   cursor: pointer;
-}
-
-.avatar {
-  width: inherit;
-  border-radius: 50%;
-  width: 32px;
-  height: 32px;
-}
-
-.app-button {
-  display: flex;
-  align-items: center;
-  border: none;
-  font-size: var(--font-size-small);
-  padding: 0px var(--spacing-small);
-  color: var(--color-dark);
-  background-color: transparent;
-  border-radius: 0;
-  cursor: pointer;
-
-  &.action {
-    border: 1px solid var(--color-disabled);
-  }
-
-  &:hover,
-  &.selected {
-    color: var(--color-dark);
-    background-color: var(--color-button-hover);
-  }
-}
-
-.icon-button {
-  border: none;
-  background-color: transparent;
-  padding: 4px 8px;
-  cursor: pointer;
-}
-
-.popover {
-  .options {
-    .button {
-      font-size: var(--font-size-body);
-      display: block;
-      padding: var(--spacing-xsmall) var(--spacing-small);
-      border: none;
-      border-radius: var(--border-radius);
-      background-color: var(--color-secondary);
-      margin-bottom: var(--spacing-xsmall);
-      width: 100%;
-      text-align: left;
-
-      &:hover {
-        background-color: var(--opacity-black-15);
-      }
-
-      &:last-child {
-        margin-bottom: 0px;
-      }
-
-      svg {
-        margin-right: var(--spacing-small);
-      }
-    }
-  }
-}
-
-.base-card {
-  .card-header {
-    display: flex;
-    align-items: center;
-
-    .title {
-      margin-bottom: 0px;
-    }
-
-    .options {
-      margin-left: auto;
-      background-color: transparent;
-      border: none;
-      color: var(--color-dark);
-    }
-  }
 }
 
 .floating-button {
