--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -1,3 +1,11 @@
-.settings-content {
-  padding: 16px;
+.settings-modal {
+  .settings-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+  }
+
+  .settings-field {
+    margin-top: 8px;
+  }
 }
