--- a/src/components/TokenDetails/style.scss
+++ b/src/components/TokenDetails/style.scss
@@ -1,23 +1,19 @@
 .token-details-modal {
-  padding: 1rem;
-
-  table {
+  form {
     width: 100%;
-    margin-bottom: 0;
+  }
 
-    td {
-      padding: 0.75rem;
-      vertical-align: top;
+  .token-details-row {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 0.5rem;
 
-      &:first-child {
-        width: 30%;
-        background-color: #f8f9fa;
-      }
-
-      &:last-child {
-        width: 70%;
-        word-break: break-word;
-      }
+    .token-details-field {
+      flex: 1;
     }
+  }
+
+  .token-details-field {
+    width: 100%;
   }
 }
