--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -24,15 +24,25 @@ main {
   cursor: pointer;
 }
 
-.floating-button {
+.floating-buttons {
   position: absolute;
   top: 10px;
-  z-index: 1069; // 1 less than popovers
-  background-color: transparent;
-  border: none;
+  right: 10px;
+  z-index: 1069;
 
-  svg {
-    width: 24px;
-    height: 24px;
+  > button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.2s ease, opacity 0.2s ease;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+      opacity: 0.8;
+    }
+
+    > span {
+      font-size: 32px;
+    }
   }
 }
