buy me a coffee

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -10,6 +10,7 @@
     border-bottom: var(--border-default);
     flex-shrink: 0;
     padding-right: 16px;
+    gap: 8px;
 
     .Mui-selected,
     .nav-item:hover {
